; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_xxhash_generic.c_xxhash64_digest.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_xxhash_generic.c_xxhash64_digest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shash_desc = type { i32 }
%struct.xxhash64_tfm_ctx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.shash_desc*, i32*, i32, i32*)* @xxhash64_digest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xxhash64_digest(%struct.shash_desc* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.shash_desc*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.xxhash64_tfm_ctx*, align 8
  store %struct.shash_desc* %0, %struct.shash_desc** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load %struct.shash_desc*, %struct.shash_desc** %5, align 8
  %11 = getelementptr inbounds %struct.shash_desc, %struct.shash_desc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call %struct.xxhash64_tfm_ctx* @crypto_shash_ctx(i32 %12)
  store %struct.xxhash64_tfm_ctx* %13, %struct.xxhash64_tfm_ctx** %9, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load %struct.xxhash64_tfm_ctx*, %struct.xxhash64_tfm_ctx** %9, align 8
  %17 = getelementptr inbounds %struct.xxhash64_tfm_ctx, %struct.xxhash64_tfm_ctx* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @xxh64(i32* %14, i32 %15, i32 %18)
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @put_unaligned_le64(i32 %19, i32* %20)
  ret i32 0
}

declare dso_local %struct.xxhash64_tfm_ctx* @crypto_shash_ctx(i32) #1

declare dso_local i32 @put_unaligned_le64(i32, i32*) #1

declare dso_local i32 @xxh64(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
